--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,18 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="" />
+    <meta name="description" content="Professional nanny with 9 years of experience. Providing loving and attentive care for your children." />
     <link rel="apple-touch-icon" href="logo.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <title>Bianca Nagata</title>
+    <title>Nanny Bianca - Professional Nanny with 9 Years of Experience</title>
 
-    <!-- Open Graph Meta Tags (para Facebook, WhatsApp, LinkedIn etc.) -->
-    <meta property="og:title" content="Nanny Bianca" />
+    <!-- Open Graph Meta Tags (for Facebook, WhatsApp, LinkedIn, etc.) -->
+    <meta property="og:title" content="Nanny Bianca - Professional Nanny with 9 Years of Experience" />
+    <meta property="og:description" content="Loving and attentive care for your children. Trustworthy nanny with 9 years of experience." />
     <meta property="og:url" content="https://www.nannybianca.com/" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://i.imgur.com/3E0Ozzs.png" />
@@ -24,7 +25,8 @@
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Nanny Bianca" />
+    <meta name="twitter:title" content="Nanny Bianca - Professional Nanny with 9 Years of Experience" />
+    <meta name="twitter:description" content="Loving and attentive care for your children. Trustworthy nanny with 9 years of experience." />
     <meta name="twitter:image" content="https://i.imgur.com/3E0Ozzs.png" />
   </head>
   <body>
